--- a/package.json
+++ b/package.json
@@ -18,5 +18,6 @@
   "homepage": "https://github.com/saikrishna-centurylink/app-ip_address#readme",
   "dependencies": {
     "ip-cidr": "^2.1.1"
-  }
+  },
+  "devDependencies": {}
 }
